Update book.html with my webpage's name

--- a/book.html
+++ b/book.html
@@ -98,7 +98,7 @@ This textbook was published by SIAM in 2024. You can <a href="https://epubs.siam
                         
                         <h3>Authors</h3>
                         <ul>
-                        <li><a href="https://math.arizona.edu/~lmig/" target="_blank">Lise-Marie Imbert-G&eacute;rard</a></li>
+                        <li><a href="https://lmigweb.github.io" target="_blank">Lise-Marie Imbert-G&eacute;rard</a></li>
                         <li><a href="https://paulgroup.apam.columbia.edu/" target="_blank">Elizabeth Paul</a></li>
                         <li><a href="https://wright-lab.notion.site/Welcome-to-the-Wright-Lab-c9ec2aac5d5b4a438b42bdd2e2dcebfc" target="_blank">Adelle Wright</a></li>
                         </ul>
@@ -144,3 +144,4 @@ This textbook was published by SIAM in 2024. You can <a href="https://epubs.siam
 (261 Downloads by July 2025)       
 </body>
 </html>
+
